<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/header_background"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent">
         
         <TextView
             android:id="@+id/textHello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:textColor="@color/colorWhite"
             android:text="@string/hello_user"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>

         <TextView
             android:id="@+id/textUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="15dp"
             android:text="@string/user"
             android:textColor="@color/colorWhite"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textHello"
             app:layout_constraintTop_toTopOf="parent"/>

     </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/white_rectangle_bg"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layoutCalendar"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/home1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/home"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCalendar"
                android:background="@drawable/white_rectangle_bg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toEndOf="@+id/layoutHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/calendar1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/calendar"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/white_rectangle_bg"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layoutCalendar"
                app:layout_constraintTop_toBottomOf="@id/layoutHome">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/team1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/team"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutWork"
                android:background="@drawable/white_rectangle_bg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toEndOf="@+id/layoutHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutCalendar">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/work1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/work"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/trending_bg"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/layoutWork"
                app:layout_constraintStart_toStartOf="@id/layoutHome"
                app:layout_constraintTop_toBottomOf="@id/layoutTeam">

                <TextView
                    android:id="@+id/textTrending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@string/trending"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    android:background="@drawable/white_rectangle_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_favorite_border"
                    android:tint="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/textTrending"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textTrending"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/dummyText"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintTop_toBottomOf="@+id/textTrending"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>